--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -103,203 +103,153 @@
         
   <div class="container" style="background-color: #fefefe; padding: 1.5em; border: 1px solid #ccc; margin-bottom: 2em;">
 
-    <h1>How to Install IObit Advanced SystemCare Ultimate Full Version with a Valid Key (Step-by-Step Guide)</h1>
+    <h1> Locked Out or Logging In? How to Sign Into Your Dashlane Account, Access “Dashlane Log In My Account,” and Get Help from Dashlane Customer Support</h1>
 
-<p>
-<strong>IObit Advanced SystemCare Ultimate</strong> is a powerful all-in-one PC optimization and security solution designed to enhance system performance while protecting against malware, ransomware, and other online threats. In this detailed guide, you’ll learn everything about the <strong>Advanced SystemCare Ultimate Pro download</strong>, installation process, activation using a license key, and key features of the latest version.
-</p>
+    <p>
+        Managing passwords should feel secure and simple—but getting locked out can be frustrating.
+        Whether you’re trying to <strong>log in to Dashlane</strong>, wondering
+        <em>where is my Dashlane account</em>, or you need help from
+        <strong>Dashlane customer support</strong>, this guide explains everything clearly.
+    </p>
 
-<hr>
+    <hr>
 
-<h2>What Is IObit Advanced SystemCare Ultimate?</h2>
+    <h2>🔑 Understanding Your Dashlane Account</h2>
+    <p>
+        Dashlane is a secure password manager that stores your login credentials, payment information,
+        and sensitive data. Your Dashlane account is linked to the email address used during registration.
+    </p>
+    <p>
+        If you’re asking questions like <strong>find my Dashlane account</strong> or
+        <strong>where is my Dashlane account</strong>, it may be because you’re using the wrong email,
+        visiting the wrong <strong>Dashlane log in page</strong>, or switching regions such as
+        <strong>Dashlane login UK</strong>.
+    </p>
 
-<p>
-<strong>IObit Advanced SystemCare Ultimate</strong> combines real-time antivirus protection with advanced system optimization tools. Unlike the standard version, it integrates Bitdefender-powered antivirus technology with IObit’s powerful PC-cleaning engine.
-</p>
+    <hr>
 
-<p>
-Whether you’re upgrading from <strong>iobit advanced systemcare</strong> or <strong>iobit advanced systemcare pro</strong>, the Ultimate edition delivers enhanced privacy protection, faster system speed, and stronger malware defense.
-</p>
+    <h2>🌐 Where to Log In: Finding the Dashlane Log In Page</h2>
+    <p>
+        To <strong>sign in to Dashlane</strong>, you can use the official
+        <strong>dashlane.com login</strong> page or the Dashlane application on your device.
+    </p>
 
-<hr>
+    <h3>🧭 Common Ways to Access Dashlane</h3>
+    <ul>
+        <li>The web-based Dashlane log in page</li>
+        <li>Desktop application for Windows or macOS</li>
+        <li>Mobile app on Android or iOS</li>
+    </ul>
 
-<h2>Key Features of Advanced SystemCare Ultimate Latest Version</h2>
+    <p>
+        Users in the UK may see references such as <strong>Dashlane log in page UK</strong> or
+        <strong>Dashlane login UK</strong>, but the sign-in process remains the same.
+    </p>
 
-<ul>
-  <li>Real-time antivirus and ransomware protection</li>
-  <li>Deep system cleaning and junk file removal</li>
-  <li>Startup and performance optimization</li>
-  <li>Privacy protection and browser anti-tracking</li>
-  <li>Automatic updates and scheduled scans</li>
-  <li>All-in-one security and optimization suite</li>
-</ul>
+    <hr>
 
-<p>
-The <strong>Advanced SystemCare Ultimate latest version</strong> (including <strong>Advanced SystemCare Ultimate v17.2 download</strong>) offers improved detection rates and better compatibility with modern Windows systems.
-</p>
+    <h2>🧑‍💻 How to Sign Into Your Dashlane Account (Step-by-Step)</h2>
+    <p>Follow these steps to <strong>log into my Dashlane account</strong> successfully:</p>
 
-<hr>
+    <h3>✅ Step 1: Open Dashlane</h3>
+    <p>
+        Launch the Dashlane app or visit the <strong>dashlane.com login</strong> screen to begin your
+        <strong>Dashlane log in my account</strong> process.
+    </p>
 
-<h2>System Requirements</h2>
+    <h3>✅ Step 2: Enter Your Email</h3>
+    <p>
+        Use the email address associated with your Dashlane account. This ensures access to your
+        <strong>Dashlane log in account</strong>.
+    </p>
 
-<ul>
-  <li>Windows 7 / 8 / 8.1 / 10 / 11 (32-bit or 64-bit)</li>
-  <li>Minimum 2 GB RAM (4 GB recommended)</li>
-  <li>1.5 GB free disk space</li>
-  <li>Active internet connection for updates</li>
-</ul>
+    <h3>✅ Step 3: Enter Your Master Password</h3>
+    <p>
+        Your Master Password unlocks your vault. It is required every time you
+        <strong>log into Dashlane</strong>.
+    </p>
 
-<hr>
+    <h3>✅ Step 4: Complete Verification</h3>
+    <p>
+        If enabled, complete two-factor authentication to finish your
+        <strong>my Dashlane sign in</strong>.
+    </p>
 
-<h2>Advanced SystemCare Ultimate Pro Download (Latest Version)</h2>
+    <hr>
 
-<p>
-To get started, you need the official <strong>Advanced SystemCare Ultimate download</strong>. Always download from the official IObit website to ensure security and authenticity.
-</p>
+    <h2>🔄 Staying Logged In and Managing Your Account</h2>
+    <p>
+        Dashlane offers a <strong>Dashlane stay logged in</strong> option on trusted devices.
+        Once logged in, you can <strong>log into Dashlane manage</strong> settings to control
+        security preferences, devices, and vault access.
+    </p>
 
-<p>
-Popular versions users search for include:
-</p>
+    <hr>
 
-<ul>
-  <li><strong>download Advanced SystemCare Ultimate 17</strong></li>
-  <li><strong>Advanced SystemCare Ultimate v17.2 download</strong></li>
-  <li><strong>Advanced SystemCare Ultimate 14 download</strong> (older systems)</li>
-  <li><strong>advanced SystemCare pro 17 download</strong> (non-antivirus version)</li>
-</ul>
+    <h2>🚫 Trouble Logging In? Common Issues</h2>
 
-<p>
-For the best performance and security, it’s recommended to use the <strong>Advanced SystemCare Ultimate latest version</strong>.
-</p>
+    <h3>❌ Incorrect Email or Password</h3>
+    <p>
+        Make sure your credentials are entered correctly when attempting a
+        <strong>Dashlane log in account</strong>.
+    </p>
 
-<hr>
+    <h3>❌ Forgotten Master Password</h3>
+    <p>
+        Dashlane cannot reset your Master Password. Account recovery is only possible if it was set up earlier.
+    </p>
 
-<h2>How to Install IObit Advanced SystemCare Ultimate Full Version</h2>
+    <h3>❌ App or Browser Issues</h3>
+    <p>
+        Update your app, clear cache, or try a different browser before you
+        <strong>log in to Dashlane</strong> again.
+    </p>
 
-<h3>Step 1: Download the Installer</h3>
-<p>
-After completing the <strong>Advanced SystemCare Ultimate Pro download</strong>, locate the installer file on your computer.
-</p>
+    <hr>
 
-<h3>Step 2: Run the Setup File</h3>
-<p>
-Double-click the installer and grant administrative permissions to begin the setup process.
-</p>
+    <h2>🆘 Getting Help from Dashlane Customer Support</h2>
+    <p>
+        If you still can’t <strong>log into my Dashlane account</strong>,
+        <strong>Dashlane customer support</strong> can help with access issues,
+        billing questions, and <strong>Dashlane sign in member</strong> problems.
+    </p>
+    <p>
+        Keep your registered email ready so support can quickly
+        <strong>find my Dashlane account</strong>.
+    </p>
 
-<h3>Step 3: Choose Installation Settings</h3>
-<p>
-Select your preferred language and installation directory. You may also customize additional options if needed.
-</p>
+    <hr>
 
-<h3>Step 4: Complete Installation</h3>
-<p>
-Click “Install” and wait for the setup to finish. Once completed, launch the software.
-</p>
+    <h2>👥 Dashlane Sign In for Members and Teams</h2>
+    <p>
+        Each user on a business or family plan has their own
+        <strong>Dashlane sign in member</strong> credentials. Members
+        <strong>sign into Dashlane account</strong> individually while admins manage permissions.
+    </p>
 
-<p>
-At this stage, you have successfully <strong>install iobit advanced systemcare ultimate full version</strong> on your PC.
-</p>
+    <hr>
 
-<hr>
+    <h2>🔐 Best Practices for a Smooth Dashlane Sign In</h2>
+    <ul>
+        <li>Bookmark the correct Dashlane log in page</li>
+        <li>Enable two-factor authentication</li>
+        <li>Keep your apps up to date</li>
+        <li>Avoid public devices when you log into Dashlane</li>
+    </ul>
 
-<h2>How to Install IObit Advanced SystemCare Ultimate with Key</h2>
+    <hr>
 
-<p>
-To unlock all premium features, you need a valid <strong>Advanced SystemCare Ultimate license key</strong>.
-</p>
-
-<h3>Activation Steps</h3>
-
-<ol>
-  <li>Open IObit Advanced SystemCare Ultimate</li>
-  <li>Click on the “Activate Now” or “Enter License” option</li>
-  <li>Paste your valid license key</li>
-  <li>Click “Activate” and wait for confirmation</li>
-</ol>
-
-<p>
-Once activated, you have successfully <strong>install iobit advanced systemcare ultimate with key</strong> and unlocked all Pro features.
-</p>
-
-<hr>
-
-<h2>Benefits of Using IObit Advanced SystemCare Ultimate</h2>
-
-<ul>
-  <li>Faster boot time and smoother performance</li>
-  <li>Enhanced malware and ransomware protection</li>
-  <li>Automatic system maintenance</li>
-  <li>Improved online privacy and security</li>
-  <li>All-in-one PC care solution</li>
-</ul>
-
-<hr>
-
-<h2>Difference Between Advanced SystemCare Pro and Ultimate</h2>
-
-<table border="1" cellpadding="8" cellspacing="0">
-  <tr>
-    <th>Feature</th>
-    <th>Advanced SystemCare Pro</th>
-    <th>Advanced SystemCare Ultimate</th>
-  </tr>
-  <tr>
-    <td>System Optimization</td>
-    <td>Yes</td>
-    <td>Yes</td>
-  </tr>
-  <tr>
-    <td>Antivirus Protection</td>
-    <td>No</td>
-    <td>Yes (Bitdefender Engine)</td>
-  </tr>
-  <tr>
-    <td>Ransomware Protection</td>
-    <td>Limited</td>
-    <td>Advanced</td>
-  </tr>
-</table>
-
-<p>
-If you need complete protection, <strong>IObit Advanced SystemCare Ultimate</strong> is the better choice.
-</p>
-
-<hr>
-
-<h2>Frequently Asked Questions (FAQ)</h2>
-
-<h3>Is IObit Advanced SystemCare Ultimate safe to use?</h3>
-<p>
-Yes, it is developed by IObit and uses trusted antivirus technology, making it safe and reliable.
-</p>
-
-<h3>Can I use Advanced SystemCare Ultimate without a license key?</h3>
-<p>
-You can use the free version with limited features, but a valid <strong>Advanced SystemCare Ultimate license key</strong> is required for full functionality.
-</p>
-
-<h3>Which version should I download?</h3>
-<p>
-Always choose the <strong>Advanced SystemCare Ultimate latest version</strong> for best performance and security.
-</p>
-
-<h3>Does it work on older Windows versions?</h3>
-<p>
-Yes, older releases such as <strong>Advanced SystemCare Ultimate 14 download</strong> support legacy systems.
-</p>
-
-<h3>Is Advanced SystemCare Ultimate better than Advanced SystemCare Pro?</h3>
-<p>
-Yes, the Ultimate edition includes antivirus protection, making it more comprehensive than <strong>iobit advanced systemcare pro</strong>.
-</p>
-
-<hr>
-
-<h2>Conclusion</h2>
-
-<p>
-The <strong>IObit Advanced SystemCare Ultimate Pro Download</strong> provides a complete solution for PC optimization and security. By following this guide, you can easily download, install, and activate the software using a valid license key. With advanced protection, improved performance, and regular updates, <strong>IObit Advanced SystemCare Ultimate</strong> remains one of the best choices for Windows users seeking an all-in-one PC care solution.
-</p>
+    <h2>✅ Final Thoughts</h2>
+    <p>
+        Whether you’re accessing the <strong>Dashlane log in page</strong>,
+        handling <strong>Dashlane log in page UK</strong> issues, or reaching out to
+        <strong>Dashlane customer support</strong>, understanding the sign-in process makes everything easier.
+    </p>
+    <p>
+        With the right steps, your <strong>my Dashlane sign in</strong> experience can be quick, secure,
+        and stress-free. 🔐✨
+    </p>
+   
     
   </div>
 
